Sidebar: expander elements: fix alignment after aria attribute
complementary to the following PR:
browser: accessibility: add 'aria-expanded' attribute to expander
label #10996

Additionally, makes the expander easier to trigger, user doesn't need
anymore to click above the text to expand or collapse it

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -61,6 +61,8 @@ img.sidebar.ui-image {
 	font-size: var(--header-font-size);
 	line-height: var(--header-height);
 	padding-inline: 8px;
+	flex: 1;
+	display: flex;
 }
 
 .ui-expander-icon-right .sidebar.unotoolbutton {
@@ -68,18 +70,7 @@ img.sidebar.ui-image {
 }
 
 .ui-expander.jsdialog.sidebar {
-	margin-inline-end: 10px;
-	padding: 0;
-}
-
-.ui-expander-icon-right.jsdialog.sidebar,
-.ui-expander-icon-right.jsdialog.sidebar .sidebar.unotoolbutton,
-{
-	display: inline-block;
-	width: 10px;
-	height: 10px;
-	padding: 0;
-	margin: 0;
+	width: 100%;
 }
 
 .ui-expander-icon-right.jsdialog.sidebar .sidebar.unotoolbutton button,
